--- a/content/appro.tex
+++ b/content/appro.tex
@@ -71,7 +71,7 @@ This architecture is similar to the architecture of Hinton \cite{hinton2006fast}
 \begin{figure}
 	\centering
     	\includegraphics[width=0.4\textwidth]{imgs/dbn_mnist.png} 
-    \caption{A common structure of a deep belief network, build up of RBMs used for classification. The first layers transform the input data/ pixel image and can extract features and the top layer RBM is used for association the data with the correct label.}
+    \caption{A common structure of a deep belief network, built up of RBMs used for classification. The first layers transform the input data/ pixel image and can extract features and the top layer RBM is used for association the data with the correct label.}
 	\label{fig:dbnmnist}
 \end{figure}
 
@@ -289,7 +289,7 @@ An approach to predict the influences of the top RBM in advance e.g like Salakhu
 \begin{figure}
 	\centering
     	\includegraphics[width=0.4\textwidth]{imgs/spike_dbm.png} 
-    \caption{The structure of a deep belief network trained with eCD. The DBN consists of single Boltzmann machines stacked on top of each others. In contrast to analog DBNs, the Boltzmann machines are still bidirection connected, and two Boltzmann machines are stacked up by forwarding the activations of the hidden layer in the bottom RBM to the visible layer in the top RBM.}
+    \caption{The structure of a deep belief network trained with eCD. The spiking DBN consists of single Boltzmann machines stacked on top of each others. In contrast to artificial DBNs, the Boltzmann machines are still bidirection connected, and two Boltzmann machines are stacked up by forwarding the activations of the hidden layer in the bottom RBM to the visible layer in the top RBM.}
 	\label{fig:spikedbn}
 \end{figure}
 
