--- a/content/intro.tex
+++ b/content/intro.tex
@@ -21,8 +21,8 @@ DBNs can be used as generative model as well, which means they can sample data a
 Adding convolution to DBNs increased the performance of DBNs on image classification tasks, caught up with the state of the art results and made the system more similar to the primate visual cortex than a standard DBN \cite{lee2009convolutional}. 
 
 All those approaches use scalar values between neurons at discrete time slices to propagate information. 
-While being well suited for GPUs, they are very not biologically plausible, since biological neuron interleave linear and non-linear operations, they communicate by stochastic binary values and are not synchronized \cite{bengio2015towards}. 
-Spiking neural networks (SNNs), designed to simulate the communication between neurons with spikes, work in continuous time by design and do not suffer from the aforementioned limitations of classical artificial neural networks.
+While being well suited for GPUs, they are not very biologically plausible, since biological neuron interleave linear and non-linear operations, communicate by stochastic binary values and are not synchronized \cite{bengio2015towards}. 
+Spiking neural networks (SNNs), designed to simulate the communication between neurons with spikes, work in continuous time by design and do not suffer from the aforementioned discrepancies of classical artificial neural networks.
 
 \section{Problem Statement} \label{c:probstate}
 
@@ -50,10 +50,10 @@ computational models for neurobiological inspired robotic grasping.
 
 \section{Overview} \label{c:overw}
 
-This thesis describes the approach and implementation of a spiking convolutional deep belief networks to extract high level features on continuous visual input. The thesis is structures as follows:
+This thesis describes the approach and implementation of spiking convolutional deep belief networks to extract high level features on continuous visual input. The thesis is structures as follows:
 
 Chapter \ref{c:backgrnd} introduces some background information, which is used in Chapter \ref{c:relwork} to describe state-of-the-art research used in this thesis. 
-Chapter \ref{c:approach} will describe the different approaches to build such a spiking convolutional deep belief networks. 
-In Chapter \ref{c:impl} the different implementation steps and  architecture will be described. 
-Chapter \ref{c:expres} outlines and compares the performance of the networks. 
-Chapter  \ref{c:conclusion} will conclude the gathered insight of this thesis, state its limitations and give suggestions for further improvements and research.  
+Chapter \ref{c:approach} will describe the different approaches to build a spiking convolutional deep belief networks. 
+In Chapter \ref{c:impl} the different implementation steps and architectures will be described. 
+Chapter \ref{c:expres} outlines and compares the performance of the networks and 
+Chapter \ref{c:conclusion} will conclude the gathered insight of this thesis, state its limitations and give suggestions for further improvements and research.  
