--- a/content/backgrnd.tex
+++ b/content/backgrnd.tex
@@ -227,7 +227,7 @@ Neurons are the main information processing unit in the brain\cite{gerstner2014n
 Information is primarily processed through chemical and electrical signals.
 
 A neuron, which is a specialized kind of (biological) cell, is separated from its surroundings by a cell membrane.   
-Due to ion concentration differences between the interior and the exterior of the cell, there are potential differences at the cell membrane, which are refereed to as the membrane potential. 
+Due to ion concentration differences between the interior and the exterior of the cell, there are potential differences at the cell membrane, which are referred to as the membrane potential. 
 Ion channels, often voltage gated, in the cell membrane allow positive and negatively charged ions to flow from the inside to the outside and from the outside to the inside of the cell.
 This can lead to an increase (de-polarization) or decrease (hyper-polarization) of the membrane potential.
 The ion flow is primarily determined by the charge difference at the membrane (reversal potential), the ion concentration differences (nernst potential) and ion pumps actively pumping ions across the membrane.
