--- a/content/intro.tex
+++ b/content/intro.tex
@@ -2,16 +2,16 @@
 
 \section{Motivation} \label{c:motiv}
 
-By winning the Imagenet Large Scale Visual Recognition Challenge in 2012, convolutional neural networks gained a big rise in popularity \cite{NIPS2012_4824}. 
+By winning the Imagenet Large Scale Visual Recognition Challenge in 2012, convolutional neural networks gained momentum \cite{NIPS2012_4824}. 
 Their powerful abstraction mechanism made them one of the most used algorithms in the fields of image and video classification and description and speech recognition \cite{szegedy2015going}\cite{karpathy2014large}\cite{abdel2014convolutional}\cite{LeCun2015}. 
-This can be primarily contributed to their ability to extract high level features on spatial and/or temporal conditioned data and the compositional structure in information of the world.
+This can be primarily contributed to their ability to extract high level features on spatial and/or temporal conditioned data and utilize the compositional structure in information of the world.
 
-Creating discriminative high level features extractors allows the system to dynamically adapt to the input data and work on various kinds of data. 
-In addition the features extractors do not need to have any semantic, human interpretable representation and can be more complex than manually built feature extractors. 
-This also removes the labor-intensive and time consuming task of manually building feature extractors.
-Consequently they recently got adapted to solve robotic problems like grasp planning, drone navigation and autonomous driving\cite{giusti2016machine}\cite{levine2016learning}\cite{chen2015deepdriving}. 
+Creating discriminative high level feature extractors allows the system to dynamically adapt to the input data and work on various kinds of data. 
+In addition, the feature extractors do not need to have any semantic, human interpretable representation and can be more complex than manually built feature extractors. 
+This also removes the labour-intensive and time consuming task of manually building feature extractors.
+Consequently, they recently got adapted to solve robotic problems like grasp planning, drone navigation and autonomous driving \cite{giusti2016machine}\cite{levine2016learning}\cite{chen2015deepdriving}. 
 
-One precursor of those are the deep belief networks (DBNs), which are built up of restricted Boltzmann machines (RBMs). 
+One precursor of CNNs are the deep belief networks (DBNs), which are built up of restricted Boltzmann machines (RBMs). 
 DBNs have shown excellent performance on image classification tasks in the early 2000s \cite{hinton2006fast}\cite{lee2009convolutional}.
 
 Compared to classical CNNs, DBNs allow recurrent connections and can be trained unsupervised. 
@@ -20,18 +20,18 @@ DBNs can be used as generative model as well, which means they can sample data a
 
 Adding convolution to DBNs increased the performance of DBNs on image classification tasks, caught up with the state of the art results and made the system more similar to the primate visual cortex than a standard DBN \cite{lee2009convolutional}. 
 
-All those approaches use scalar values between neurons at discrete time slices to propagate information. 
+All these approaches use scalar values between neurons at discrete time slices to propagate information. 
 While being well suited for GPUs, they are not very biologically plausible, since biological neuron interleave linear and non-linear operations, communicate by stochastic binary values and are not synchronized \cite{bengio2015towards}. 
 Spiking neural networks (SNNs), designed to simulate the communication between neurons with spikes, work in continuous time by design and do not suffer from the aforementioned discrepancies of classical artificial neural networks.
 
 \section{Problem Statement} \label{c:probstate}
 
-To our best knowledge, up to today, there exists no system which utilizes the benefits of a convolutional architecture, spiking neural networks and deep belief networks altogether . 
-The main objective of this thesis is to realize such a spiking network, which integrates convolution and can be easily trained utilizing an RBM learning algorithm, to extract high level features. 
+To the best of our knowledge, up to today, no system which utilizes the benefits of a convolutional architecture, spiking neural networks and deep belief networks altogether has been suggested. 
+The main objective of the presented thesis is to realize such a spiking network, which integrates convolution and can be easily trained utilizing an RBM learning algorithm in order to extract high level features. 
 Two approaches are explored. 
-The first approach trains convolutional RBMs on discretized input data, to build up a DBN which is then converted to a SNN. 
-The second approach learn from continuous, event-driven input-data and adopts the synaptic weights with a plasticity rule with shared weights to train spiking convolutional RBMs directly. 
-Both approaches will learn to extract high level features, which can be further used to classify an object. 
+The first approach trains convolutional RBMs on discretized input data to build up a DBN which is then converted to a SNN. 
+The second approach learns from continuous, event-driven input-data and adopts the synaptic weights with a plasticity rule with shared weights to train spiking convolutional RBMs directly. 
+Both approaches will learn to extract high level features which can be further used to classify an object. 
 
 \section{The Human Brain Project} \label{c:thehbp}
 
@@ -50,9 +50,9 @@ computational models for neurobiological inspired robotic grasping.
 
 \section{Overview} \label{c:overw}
 
-This thesis describes the approach and implementation of spiking convolutional deep belief networks to extract high level features on continuous visual input. The thesis is structures as follows:
+This thesis describes the approach and implementation of spiking convolutional deep belief networks to extract high level features on continuous visual input. The thesis is structured as follows:
 
-Chapter \ref{c:backgrnd} introduces some background information, which is used in Chapter \ref{c:relwork} to describe state-of-the-art research used in this thesis. 
+Chapter \ref{c:backgrnd} introduces background information to present the state-of-the-art research used in this thesis in Chapter \ref{c:relwork}. 
 Chapter \ref{c:approach} will describe the different approaches to build a spiking convolutional deep belief networks. 
 In Chapter \ref{c:impl} the different implementation steps and architectures will be described. 
 Chapter \ref{c:expres} outlines and compares the performance of the networks and 
